--- a/molecule/cloud-aws-direct/molecule.yml
+++ b/molecule/cloud-aws-direct/molecule.yml
@@ -9,20 +9,20 @@ lint: |
   yamllint
   ansible-lint
 platforms:
-  - name: test-aws-centos8-jenkins
-    image: ami-0ed2ad9dc845b42b6
-    platform: centos8
-    instance_type: m5.large
-    region: us-east-1
-    vpc_subnet_id: subnet-0f2b9cd66faea38af
-    assign_public_ip: false
-    spot_price: 0.05
-    security_group_name:
-      - default
-    wait_timeout: 1800
-    ssh_user: centos
-    groups:
-      - rhel_family
+#  - name: test-aws-centos8-jenkins
+#    image: ami-0ed2ad9dc845b42b6
+#    platform: centos8
+#    instance_type: m5.large
+#    region: us-east-1
+#    vpc_subnet_id: subnet-0f2b9cd66faea38af
+#    assign_public_ip: false
+#    spot_price: 0.05
+#    security_group_name:
+#      - default
+#    wait_timeout: 1800
+#    ssh_user: centos
+#    groups:
+#      - rhel_family
 
   - name: test-aws-Amazon2-jenkins
     image: ami-0b898040803850657
